riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_async_function_returning_string.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_function(&func, \"riff\")"
---
public func fetchData(url: String) async throws -> String {
    let futureHandle = url.withCString { urlPtr in riff_fetch_data_start(UnsafeRawPointer(urlPtr).assumingMemoryBound(to: UInt8.self), UInt(url.utf8.count)) }

    return try await riffAsyncCall(
        futureHandle: futureHandle,
        pollFn: riff_fetch_data_poll,
        completeFn: riff_fetch_data_complete,
        cancelFn: riff_fetch_data_cancel,
        freeFn: riff_fetch_data_free
    ) { buf, status in
        guard status.code == 0 else { riff_free_buf_u8(buf); throw FfiError(message: "ffi call failed") }
        defer { riff_free_buf_u8(buf) }
        return riffDecodeOwnedBuf(buf.ptr, Int(buf.len)) { reader in reader.readString() }
    }
}
