riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_class_with_async_method.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: "render_class(&cls, \"riff\")"
---
public final class HttpClient {
    let handle: OpaquePointer

    init(handle: OpaquePointer) {
        self.handle = handle
    }

    deinit {
        riff_http_client_free(handle)
    }

    public func fetch(url: String) async throws -> Data {
        let futureHandle = url.withCString { urlPtr in riff_http_client_fetch_start(handle, UnsafeRawPointer(urlPtr).assumingMemoryBound(to: UInt8.self), UInt(url.utf8.count)) }

        return try await riffAsyncCall(
            futureHandle: futureHandle,
            pollFn: riff_http_client_fetch_poll,
            completeFn: riff_http_client_fetch_complete,
            cancelFn: riff_http_client_fetch_cancel,
            freeFn: riff_http_client_fetch_free
        ) { buf, status in
            guard status.code == 0 else { riff_free_buf_u8(buf); throw FfiError(message: "ffi call failed") }
            defer { riff_free_buf_u8(buf) }
            return riffDecodeOwnedBuf(buf.ptr, Int(buf.len)) { reader in reader.readBytes() }
        }
    }

}
