riff_bindgen/src/render/swift/snapshots/riff_bindgen__render__swift__templates__tests__snapshot_data_enum_with_payloads.snap
---
source: riff_bindgen/src/render/swift/templates.rs
expression: render_enum(&e)
---
public enum Message: Hashable, Equatable, Sendable {
    case empty
    case text(String)
    case number(Int64)

    @inlinable static func decode(wireBuffer wire: WireBuffer, at offset: Int) -> (value: Message, size: Int) {
        let tag = wire.readI32(at: offset)
        var pos = offset + 4
        switch tag {
        case 0:
            return (.empty, pos - offset)
        case 1:
            let v = { let (v, s) = wire.readString(at: pos); pos += s; return v }()
            return (.text(v), pos - offset)
        case 2:
            let v = { let v = wire.readI64(at: pos); pos += 8; return v }()
            return (.number(v), pos - offset)
        default:
            fatalError("Invalid Message tag: \(tag)")
        }
    }
}

extension Message: WireEncodable {
    @usableFromInline static var isBlittable: Bool { false }

    @inlinable func wireEncodedSize() -> Int {
        switch self {
        case .empty:
            return 4
        case let .text(value):
            return 4 + (4 + value.utf8.count)
        case .number:
            return 4 + 8
        }
    }

    @inlinable func wireEncodeTo(_ data: inout Data) {
        switch self {
        case .empty:
            data.appendI32(0)
        case let .text(value):
            data.appendI32(1)
            data.appendString(value)
        case let .number(value):
            data.appendI32(2)
            data.appendI64(value)
        }
    }

    @inlinable func wireEncodeToBytes(_ bytes: inout [UInt8]) {
        switch self {
        case .empty:
            bytes.appendI32(0)
        case let .text(value):
            bytes.appendI32(1)
            bytes.appendString(value)
        case let .number(value):
            bytes.appendI32(2)
            bytes.appendI64(value)
        }
    }
}
